[package]
name = "gurt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
httpdate = "1.0"
memchr = "2"
tokio = { version = "1", features = ["io-util"] }
anyhow = "1.0"

[features]
default = []
json = ["serde", "serde_json"]
