[package]
name = "gurtd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
httpdate = "1.0"
rustls = "0.20"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
url = "2.5"
gurt-api = { path = "../gurt-api" }
percent-encoding = "2.3"
webpki = "0.22"
sha2 = "0.10"
