[package]
name = "gurtd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
httpdate = "1.0"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
url = "2.5"
gurt-api = { path = "../gurt-api", features = ["json"] }
serde_json = "1.0"
percent-encoding = "2.3"
webpki = "0.22"
sha2 = "0.10"
memchr = "2"
tantivy = "0.25"
once_cell = "1"

[dev-dependencies]
once_cell = "1"
