[package]
name = "gurtd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
httpdate = "1.0"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
url = "2.5"
gurt-api = { path = "../gurt-api", features = ["json"] }
serde_json = "1.0"
percent-encoding = "2.3"
webpki = "0.22"
sha2 = "0.10"
memchr = "2"
once_cell = "1"
gurt-query = { path = "../gurt-query" }
gurt-index = { path = "../gurt-index" }
gurt-db = { path = "../gurt-db" }
gurt-web = { path = "../gurt-web", optional = true }
gurt-macros = { path = "../gurt-macros", optional = true }
dotenv = "0.15.0"

[features]
default = []
# ext-web enables attribute-style routing registry (phase 2, default off)
ext-web = ["dep:gurt-web", "dep:gurt-macros"]

[dev-dependencies]
once_cell = "1"
